observability/monitoring/~kubernetes-dashboard/kubernetes-dashboard.ingress.kube-system.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/secure-backends: "true"
  name: dashboard-ingress
  namespace: kube-system
spec:
  tls:
  - hosts:
    - ui.cloud.local
    secretName: kubernetes-dashboard-certs
  rules:
  - host: ui.cloud.local
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
